# git_commit_ai

./: Cargo.toml
src/: main.rs
